Login y Registro de usuario funcionando, incorporacion de diseño a Login.cshtml

--- a/SolutionMisOfertas/MisOfertas.Web/MisOfertas.Web.csproj
+++ b/SolutionMisOfertas/MisOfertas.Web/MisOfertas.Web.csproj
@@ -255,6 +255,7 @@
     <Content Include="Content\date-time\locales\bootstrap-datepicker.zh-CN.js" />
     <Content Include="Content\date-time\locales\bootstrap-datepicker.zh-TW.js" />
     <Content Include="Content\date-time\moment.min.js" />
+    <Content Include="Content\Styles.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -282,6 +283,7 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\ValidadorRut.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -292,7 +294,9 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="Views\Web.config" />
+    <Content Include="Views\Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
